--- a/index.html
+++ b/index.html
@@ -14,16 +14,57 @@
     <title>Library of Congress Search</title>
 </head>
 <body>
-    <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label">Example label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+  <!-- Center vertically by setting width equal to page width and make it flexbox -->
+  <!-- Center horizontally by setting height equal to page height -->
+  <div class="min-vh-100 d-flex align-items-center bg-dark">
+    <!-- Change the alignment of flex item to center with justify-content-center -->
+    <section class="w-100 row justify-content-center">
+
+      <div class="col-10 col-md-6 col-lg-5">
+        <!-- Bootstrap preset color classes for backgrounds and text -->
+        <!-- Use p - for classes that set padding -->
+        <!-- Use m - for classes that set margin -->
+        <form class="bg-white my-4 p-4 rounded">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" class="form-control" placeholder="Username" required />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" id="email" class="form-control" placeholder="Username" required />
+          </div>
+
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="text" id="password" class="form-control" placeholder="Password" required />
+          </div>
+
+          <div class="form-group">
+            <label for="referral">Where did you hear about us?</label>
+            <select class="form-control" id="referral">
+              <option disabled selected>Pick One...</option>
+              <option>Social Media</option>
+              <option>Friend/Colleague</option>
+              <option>Billboard</option>
+              <option>Magazine/Email Ad</option>
+              <option>Other</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="yes" id="mailing-list">
+              <label class="form-check-label" for="mailing-list">
+                Sign up for the mailing list?
+              </label>
+            </div>
+          </div>
+
+          <button class="btn btn-block btn-success">Complete Signup!</button>
+        </form>
       </div>
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Open this select menu</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
+    </section>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
