--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" 
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
+    crossorigin="anonymous">
     <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -16,33 +19,18 @@
 <body>
   <!-- Center vertically by setting width equal to page width and make it flexbox -->
   <!-- Center horizontally by setting height equal to page height -->
-  <div class="min-vh-100 d-flex align-items-center bg-dark">
+  <div class="min-vh-100 d-flex align-items-center bg-info">
     <!-- Change the alignment of flex item to center with justify-content-center -->
     <section class="w-100 row justify-content-center">
-
-      <div class="col-10 col-md-6 col-lg-5">
-        <!-- Bootstrap preset color classes for backgrounds and text -->
-        <!-- Use p - for classes that set padding -->
-        <!-- Use m - for classes that set margin -->
+      <div class="col-12 col-md-6 col-lg-8">
         <form class="bg-white my-4 p-4 rounded">
           <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" class="form-control" placeholder="Username" required />
+            <h1 class="title text-info text-center">Library of Congress Search Engine</h1>
+            <input type="text" id="username" class="form-control" placeholder="Search!" required />
           </div>
           <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" id="email" class="form-control" placeholder="Username" required />
-          </div>
-
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="text" id="password" class="form-control" placeholder="Password" required />
-          </div>
-
-          <div class="form-group">
-            <label for="referral">Where did you hear about us?</label>
             <select class="form-control" id="referral">
-              <option disabled selected>Pick One...</option>
+              <option disabled selected>Select a format...</option>
               <option>Social Media</option>
               <option>Friend/Colleague</option>
               <option>Billboard</option>
@@ -51,16 +39,7 @@
             </select>
           </div>
 
-          <div class="form-group">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="yes" id="mailing-list">
-              <label class="form-check-label" for="mailing-list">
-                Sign up for the mailing list?
-              </label>
-            </div>
-          </div>
-
-          <button class="btn btn-block btn-success">Complete Signup!</button>
+          <button class="btn btn-block btn-success">Search</button>
         </form>
       </div>
     </section>
