Fetch request added

--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
           <div class="form-group">
             <select class="form-control" id="referral">
               <option disabled selected>Select a format...</option>
-              <option>Social Media</option>
-              <option>Friend/Colleague</option>
-              <option>Billboard</option>
-              <option>Magazine/Email Ad</option>
-              <option>Other</option>
+              <option>Maps</option>
+              <option>Audio Recordings</option>
+              <option>Photo, Print, Drawing</option>
+              <option>Manuscript / Mixed Material</option>
+              <option>Newspapers</option>
+              <option>Film, Videos</option>
+              <option>Printed Music</option>
+              <option>Websites</option>
             </select>
           </div>
 
-          <button class="btn btn-block btn-success">Search</button>
+          <button id="searchBtn" class="btn btn-block btn-success">Search</button>
         </form>
       </div>
     </section>
