--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <form class="bg-white my-4 p-4 rounded">
           <div class="form-group">
             <h1 class="title text-info text-center">Library of Congress Search Engine</h1>
-            <input type="text" id="username" class="form-control" placeholder="Search!" required />
+            <input type="text" id="userInput" class="form-control" placeholder="Search!" required />
           </div>
           <div class="form-group">
-            <select class="form-control" id="referral">
+            <select class="form-control" id="dropDown">
               <option disabled selected>Select a format...</option>
               <option>Maps</option>
               <option>Audio Recordings</option>
